# Argus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  biome.json  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: ai-interviewer.md  architecture.md  data-sources.md  importers.md  roadmap.md  rule-authoring.md  threat-model.md
examples/: agentic-rag.json  payment-api.json
services/ai/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/ai/app/: __init__.py  main.py  models.py  review.py
services/ai/tests/: test_review.py
src/client/: App.tsx  main.tsx  styles.css
src/client/components/: ArchitectureNode.tsx  DraftReviewModal.tsx  Inspector.tsx  InterviewWizard.tsx  Palette.tsx  ResultsPanel.tsx
src/client/lib/: api.ts  export.ts
src/engine/: analyze.ts  controls.ts  frameworks.ts  index.ts  intelligence.ts  risk.ts  rules.ts
src/importers/: compose.ts  index.ts  kubernetes.ts  mcp.ts  openapi.ts  terraform.ts  types.ts  utils.ts
src/interview/: buildDraft.ts  index.ts  review.ts
src/server/: app.ts  index.ts
src/shared/: constants.ts  schemas.ts
tests/: api.test.ts  engine.test.ts  importers.test.ts  intelligence.test.ts  interview.test.ts  schema.test.ts
